--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -135,6 +135,7 @@
     font-family: 'Precious';
     font-weight: 300;
     font-size: 2.5em;
+    color: #FFF;
 }
 
  .wrap {
@@ -228,7 +229,7 @@ h2{
     
 }
 
-.stars, .twinkling, .clouds {
+.twinkling, .clouds {
   position:absolute;
   top:0;
   left:0;
@@ -237,11 +238,6 @@ h2{
   width:100%;
   height:200px;
   display:block;
-}
-
-.stars {
-  background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
-  z-index:0;
 }
 
 .twinkling{
